# node-osu

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  server.js  wav_to_beats.cpp
public/: game.js  index.html  style.css  ui.js
